[package]
name = "am2302"
version = "0.1.0"
authors = ["wolfbiker1 <be631wil@htwg-konstanz.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = "0.2"
atomic_float = "0.1.0"
lazy_static = "1.4.0"
chrono = "0.4.19"